2009-08-17  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-register-completion-file-name-handler):
	Check also for (member 'partial-completion completion-styles).

2009-08-16  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/cperl-mode.el (cperl-electric-paren): Don't expand
	abbrev (Bug#3943).

2007-10-08  Ilya Zakharevich  <ilyaz@cpan.org>

	* progmodes/cperl-mode.el: Merge upstream 6.2.
	(cperl-mode-syntax-table): Modify syntax entry for ["'`].
	(cperl-forward-re): Check cperl-brace-recursing.
	(cperl-highlight-charclass): New function.
	(cperl-find-pods-heres): Use it.
	(cperl-fill-paragraph): Synch to save-excursion placement used
	upstream.
	(cperl-beautify-regexp-piece): Fix column calculation.
	(cperl-make-regexp-x): Handle case where point is between "q" and
	"rs".
	(cperl-beautify-level): Don't process entire regexp.
	(cperl-build-manpage, cperl-perldoc): Bind Man-switches before
	calling man.
	(cperl-tips-faces, cperl-mode, cperl-electric-backspace): Doc fix.
	(cperl-init-faces): Build a list in the normal way.

2009-08-16  Chong Yidong  <cyd@stupidchicken.com>

	* calendar/parse-time.el (parse-time-string-chars): Save match
	data.

2009-08-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/sql.el (sql-product-alist): Add :name tag to entries.
	(sql-product): Use it.
	(sql-mode-menu): Auto-generate the menu based on sql-product-alist.
	(sql-set-product): Add completion.
	(sql-highlight-oracle-keywords, sql-highlight-postgres-keywords)
	(sql-highlight-linter-keywords, sql-highlight-ms-keywords)
	(sql-highlight-ansi-keywords, sql-highlight-sybase-keywords)
	(sql-highlight-informix-keywords, sql-highlight-interbase-keywords)
	(sql-highlight-ingres-keywords, sql-highlight-solid-keywords)
	(sql-highlight-mysql-keywords, sql-highlight-sqlite-keywords)
	(sql-highlight-db2-keywords): Remove.
	(sql-find-sqli-buffer, sql-set-sqli-buffer-generally)
	(sql-highlight-product): Use derived-mode-p.